refactor: GPIOライブラリの選択機能を追加 (gpiozero/RPi.GPIO)
- RPi.GPIO と gpiozero の両方に対応
- config.yaml に gpio_library 設定を追加 ('auto', 'gpiozero', 'rpigpio')
- trigger_manager.py で設定に基づきライブラリを自動選択初期化
- requirements.txt と README.md を更新

--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,9 @@ trigger:
     - http
     - websocket
   gpio_pin: 17  # Raspberry Pi GPIO pin number
+  # Select GPIO library: 'auto', 'gpiozero', or 'RPi.GPIO'
+  # 'auto' will try gpiozero first, then RPi.GPIO.
+  gpio_library: auto
   http_port: 8080
   websocket_port: 8081
 
