--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Pillow>=8.0.0
 numpy>=1.19.0
 pynput>=1.7.0
 pyyaml>=5.4.0
-gpiozero>=1.6.2; platform_system == "Linux"
+# Choose one or install both for GPIO trigger on Linux/Raspberry Pi
+gpiozero>=1.6.2; platform_system == "Linux" # Recommended for Pi 5+
+RPi.GPIO>=0.7.0; platform_system == "Linux" # Legacy, may work on older Pis
